work2/work2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: work2
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: work2-http
